# claude-code-tutorials-apps

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  jest.config.js  jest.setup.js  package.json  tsconfig.json  v1-CLAUDE.md
fastapi/: .env.example  .gitignore  IMPLEMENTATION_NOTES.md  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt
fastapi/alembic/: env.py
fastapi/alembic/versions/: 001_initial.py  002_add_notifications.py  02514e126043_add_tags_table.py  39fda2fe120a_add_sprint_model.py  a617c0189f72_add_time_entries_table.py  cd068e602ed3_add_widgets_table.py
fastapi/app/: __init__.py  config.py  database.py  main.py  seed.py
fastapi/app/models/: __init__.py  comment.py  label.py  notification.py  project.py  sprint.py  tag.py  task.py  time_entry.py  user.py  widget.py
fastapi/app/repositories/: task_repository.py
fastapi/app/routers/: auth.py  comments.py  notifications.py  projects.py  sprints.py  tasks.py  time_entries.py  widgets.py
fastapi/app/schemas/: __init__.py  comment.py  label.py  notification.py  project.py  sprint.py  task.py  time_entry.py  user.py  widget.py
fastapi/app/services/: auth_service.py  notification_service.py  project_service.py  sprint_service.py  task_service.py  time_entry_service.py  widget_service.py
fastapi/app/utils/: csv_export.py  exceptions.py  security.py
fastapi/tests/: conftest.py  test_auth.py  test_comments.py  test_export.py  test_projects.py  test_sprints.py  test_task_repository.py  test_tasks.py  test_time_entries.py  test_widgets.py
(+204 files in other folders)
